--- a/src/app/pages/planos/planos-grid/planos-grid.component.html
+++ b/src/app/pages/planos/planos-grid/planos-grid.component.html
@@ -1,1 +1,50 @@
-<p>planos-grid works!</p>
+<div class="page-container-grid">
+  <h1>Listagem de Planos</h1>
+  <div class="header-grid">
+    <mat-form-field class="search-field-grid">
+      <input matInput placeholder="Pesquisar por Nome" [(ngModel)]="searchTerm" (keyup)="search()" />
+      <mat-icon matPrefix>search</mat-icon>
+    </mat-form-field>
+
+    <button style="margin-top:17px;" mat-raised-button color="primary"  (click)="addNew()">Novo PLano</button>
+  </div>
+  <table mat-table [dataSource]="dataSourceFilter" class="mat-elevation-z8">
+    <ng-container matColumnDef="nome">
+      <th mat-header-cell *matHeaderCellDef > Nome</th>
+      <td mat-cell *matCellDef="let element" > {{element.nome}} </td>
+    </ng-container>
+    <ng-container matColumnDef="valor">
+      <th mat-header-cell *matHeaderCellDef > Valor </th>
+      <td mat-cell *matCellDef="let element"> {{element.valor.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' })}} </td>
+    </ng-container>
+    <ng-container matColumnDef="entrada">
+      <th mat-header-cell *matHeaderCellDef > Entrada</th>
+      <td mat-cell *matCellDef="let element"> {{element.entrada + "%"}} </td>
+    </ng-container>
+    <ng-container matColumnDef="numeroParcelas">
+      <th mat-header-cell *matHeaderCellDef > Máximo de parcelas</th>
+      <td mat-cell *matCellDef="let element"> {{element.numeroParcelas}} </td>
+    </ng-container>
+    <ng-container matColumnDef="status" >
+      <th mat-header-cell *matHeaderCellDef >Status</th>
+      <td mat-cell *matCellDef="let element" > {{element.status ? 'Ativo' : 'Inativo'}} </td>
+    </ng-container>
+    <ng-container matColumnDef="actions" class="">
+      <th mat-header-cell *matHeaderCellDef > Ações </th>
+      <td mat-cell *matCellDef="let element" >
+        <button class="icon-blue" mat-icon-button (click)="viewItem(element)">
+          <mat-icon >visibility</mat-icon>
+        </button>
+        <button class="icon-green" mat-icon-button (click)="editItem(element)">
+          <mat-icon >edit</mat-icon>
+        </button>
+        <button class="icon-red" mat-icon-button  (click)="deleteItem(element)">
+          <mat-icon >delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
