--- a/src/app/pages/status/status-grid/status-grid.component.html
+++ b/src/app/pages/status/status-grid/status-grid.component.html
@@ -10,7 +10,7 @@
 
     <div class="buttonArea">
       <button style="margin-top:17px;" mat-raised-button color="primary" (click)="addNew()">Novo Status</button>
-      <button style="margin: 17px 0px;" mat-raised-button  (click)="addNew()">Atualizar por Núcleo</button>
+      <button style="margin: 17px 0px;" mat-raised-button  (click)="updateAllByNucleo()">Atualizar por Núcleo</button>
     </div>
   </div>
   <table mat-table [dataSource]="dataSourceFilter" class="mat-elevation-z8">
