--- a/src/app/pages/planos/planos-form/planos-form.component.html
+++ b/src/app/pages/planos/planos-form/planos-form.component.html
@@ -60,6 +60,7 @@
             <mat-option value="85"> 85% </mat-option>
             <mat-option value="90"> 90% </mat-option>
             <mat-option value="95"> 95% </mat-option>
+            <mat-option value="100"> 100% </mat-option>
           </mat-select>
           @if (entradaFormControl.hasError('required')) {
             <mat-error>Este campo é <strong>obrigatório</strong></mat-error>
