--- a/src/app/pages/contratantes/contratante-form/contratante-form.component.html
+++ b/src/app/pages/contratantes/contratante-form/contratante-form.component.html
@@ -40,11 +40,30 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field>
-                <mat-label>CPF</mat-label>
+                <mat-label *ngIf="formControls?.get('cpf')?.value.length <= 11">CPF</mat-label>
+                <mat-label *ngIf="formControls?.get('cpf')?.value.length > 11">CNPJ</mat-label>
                 <input [readonly]="visualizar"  matInput formControlName="cpf" />
                 <mat-error *ngIf="formControls?.get('cpf')?.hasError('cpfInvalido')">CPF inválido</mat-error>
+                <mat-error *ngIf="formControls?.get('cpf')?.hasError('cnpjInvalido')">CNPJ inválido</mat-error>
+                
               </mat-form-field>
             </div>
+
+            <div class="input-file-row" *ngIf="formControls?.get('cpf')?.value.length > 11">
+              <mat-form-field>
+                <mat-label>Razão Social</mat-label>
+                <input [readonly]="visualizar"  matInput formControlName="razao_social" />
+              </mat-form-field>
+              <mat-form-field class="search-field-grid">
+                <mat-label>Pessoa Juridica de direito</mat-label>
+                <mat-select formControlName="pessoa_juridica">
+                  <mat-option value="">Selecione uma opção</mat-option>
+                  <mat-option value="publico">Público</mat-option>
+                  <mat-option value="privado">Privado</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+    
       
             <div class="inputs-row-form">
               <mat-slide-toggle 
