--- a/src/app/pages/contratos/contratos-form/contratos-form.component.html
+++ b/src/app/pages/contratos/contratos-form/contratos-form.component.html
@@ -1,5 +1,5 @@
 <div class="container-form">
-  <mat-card class="card-form " >
+  <mat-card class="card-form " style="padding: 20px;">
     <mat-card-header>
       <mat-card-title>Cadastro de Contrato</mat-card-title>
     </mat-card-header>
