--- a/src/app/pages/funcionarios/funcionario-form/funcionario-form.component.html
+++ b/src/app/pages/funcionarios/funcionario-form/funcionario-form.component.html
@@ -42,9 +42,9 @@
           </div>
     
           <mat-form-field>
-            <mat-label *ngIf="cpfFormControl.value && cpfFormControl.value.length <= 11">CPF</mat-label>
-            <mat-label *ngIf="cpfFormControl.value && cpfFormControl.value.length > 11">CNPJ</mat-label>
-            <input [readonly]="visualizar"  matInput [formControl]="cpfFormControl" />
+            <mat-label *ngIf="cpfCnpjLength() <= 11">CPF</mat-label>
+            <mat-label *ngIf="cpfCnpjLength() > 11">CNPJ</mat-label>
+            <input [readonly]="visualizar"  matInput [formControl]="cpfFormControl" (input)="maskCpfCnpj()"/>
             <mat-error *ngIf="cpfFormControl.hasError('cpfInvalido')">CPF inválido</mat-error>
             <mat-error *ngIf="cpfFormControl.hasError('cnpjInvalido')">CNPJ inválido</mat-error>
           </mat-form-field>
