--- a/src/app/pages/prefeitura/prefeitura-form/prefeitura-form.component.html
+++ b/src/app/pages/prefeitura/prefeitura-form/prefeitura-form.component.html
@@ -7,11 +7,19 @@
     <form [formGroup]="formControls">
       <mat-card-content >
         <mat-tab-group animationDuration="700ms" >
-          <mat-tab  > 
+          <mat-tab  >
+            <div  class="inputs-row-form" *ngIf="showAnexos">
+              <app-file-input [nome]="'Logo da Empresa*'"
+                  [accept]="'.jpg'"
+                  [fileInput]="this.formControls.get('anexos')?.get('logoFile')?.value ? this.formControls.get('anexos')?.get('logoFile')?.value : {base64: '',type: ''}"
+                  (fileOutput)="saveFileBase64($event)"
+                  (fileSelected)="onFileSelected($event)"></app-file-input>
+            </div>
+
             <ng-template mat-tab-label>
-              <span [ngClass]="formControls.get('nome')?.invalid 
-              || formControls.get('cnpj')?.invalid 
-              || formControls.get('telefone')?.invalid 
+              <span [ngClass]="formControls.get('nome')?.invalid
+              || formControls.get('cnpj')?.invalid
+              || formControls.get('telefone')?.invalid
               || formControls.get('email')?.invalid  ?'tab-invalid' : ''">Dados Prefeitura</span>
             </ng-template>
             <mat-form-field>
@@ -41,9 +49,9 @@
                 <mat-error *ngIf="formControls.get('telefone')?.hasError('required')">
                   Este campo é <strong>obrigatório</strong>
                 </mat-error>
-              </mat-form-field> 
+              </mat-form-field>
             </div>
-              
+
             <mat-form-field>
               <mat-label>Email</mat-label>
               <input [readonly]="visualizar" type="email" matInput formControlName="email"  placeholder="Ex.pat@example.com" />
@@ -77,7 +85,7 @@
                   </mat-error>
                   <mat-error *ngIf="formControls.get('representante.cpf')?.hasError('cpfInvalido')">CPF inválido</mat-error>
                 </mat-form-field>
-      
+
                 <mat-form-field>
                   <mat-label>RG</mat-label>
                   <input [readonly]="visualizar" matInput formControlName="rg" />
@@ -87,9 +95,9 @@
                   <mat-error *ngIf="formControls.get('representante.rg')?.hasError('rgInvalid')">
                     Número do RG inválido.
                   </mat-error>
-                </mat-form-field> 
+                </mat-form-field>
               </div>
-              
+
               <div class="inputs-row-form">
                 <mat-form-field>
                   <mat-label>Nacionalidade</mat-label>
@@ -97,11 +105,11 @@
                   <mat-error *ngIf="formControls.get('representante.nacionalidade')?.hasError('required')">
                     Este campo é <strong>obrigatório</strong>
                   </mat-error>
-                </mat-form-field> 
+                </mat-form-field>
               </div>
           </mat-tab>
 
-          <mat-tab formGroupName="responsavel" > 
+          <mat-tab formGroupName="responsavel" >
             <ng-template mat-tab-label>
               <span [ngClass]="formControls.get('responsavel')?.invalid ?'tab-invalid' : ''">Dados Responsável</span>
             </ng-template>
@@ -113,7 +121,7 @@
                   Este campo é <strong>obrigatório</strong>
                 </mat-error>
               </mat-form-field>
-      
+
               <mat-form-field>
                 <mat-label>Cargo</mat-label>
                 <input [readonly]="visualizar"  matInput formControlName="cargo" />
@@ -123,12 +131,11 @@
               </mat-form-field>
           </mat-tab>
 
-          <mat-tab formGroupName="endereco" > 
+              <mat-tab formGroupName="endereco" >
             <ng-template mat-tab-label>
               <span [ngClass]="formControls.get('endereco')?.invalid ?'tab-invalid' : ''">Endereço</span>
             </ng-template>
-            
-           
+
               <mat-form-field>
                 <mat-label>CEP</mat-label>
                 <input [readonly]="visualizar" (keyup)="findAddress()" maxlength="8" type="text" matInput formControlName="cep"/>
@@ -136,7 +143,7 @@
                   Este campo é <strong>obrigatório</strong>
                 </mat-error>
               </mat-form-field>
-    
+
               <div class="inputs-row-form">
                 <mat-form-field>
                   <mat-label>Rua</mat-label>
@@ -145,7 +152,7 @@
                     Este campo é <strong>obrigatório</strong>
                   </mat-error>
                 </mat-form-field>
-       
+
                   <mat-form-field>
                     <mat-label>Número</mat-label>
                     <input [readonly]="visualizar"  type="text" matInput formControlName="numero" />
@@ -157,9 +164,9 @@
                     <mat-label>Complemento</mat-label>
                     <input [readonly]="visualizar" type="text" matInput formControlName="complemento" />
                   </mat-form-field>
-         
+
               </div>
-              
+
               <div class="inputs-row-form">
                 <mat-form-field>
                   <mat-label>Bairro</mat-label>
@@ -168,7 +175,7 @@
                     Este campo é <strong>obrigatório</strong>
                   </mat-error>
                 </mat-form-field>
-      
+
                 <mat-form-field>
                   <mat-label>Cidade/UF</mat-label>
                   <input [readonly]="visualizar"  type="text" matInput formControlName="cidadeUf"  />
@@ -179,7 +186,7 @@
               </div>
           </mat-tab>
         </mat-tab-group>
-  
+
         <div class="area-botao-form " *ngIf="isLoggedIn && this.prefeituraId === '' || this.prefeituraId === undefined">
           <button mat-raised-button color="primary" (click)="create()" [disabled]="!formValid()">Cadastrar</button>
           <button  mat-raised-button color="link" routerLink="/prefeitura/lista">Voltar</button>
