--- a/src/app/pages/usuarios/usuario-form/usuario-form.component.html
+++ b/src/app/pages/usuarios/usuario-form/usuario-form.component.html
@@ -38,9 +38,9 @@
       </div>
 
       <mat-form-field>
-        <mat-label *ngIf="loginCpfFormControl.value && loginCpfFormControl.value.length <= 11">CPF</mat-label>
-        <mat-label *ngIf="loginCpfFormControl.value && loginCpfFormControl.value.length > 11">CNPJ</mat-label>
-        <input [readonly]="view" matInput [formControl]="loginCpfFormControl" />
+        <mat-label *ngIf="cpfCnpjLength() <= 11">CPF</mat-label>
+        <mat-label *ngIf="cpfCnpjLength() > 11">CNPJ</mat-label>
+        <input [readonly]="view" matInput [formControl]="loginCpfFormControl" (input)="maskCpfCnpj()" />
         <mat-error *ngIf="loginCpfFormControl.hasError('cpfInvalido')">CPF inválido</mat-error>
         <mat-error *ngIf="loginCpfFormControl.hasError('cnpjInvalido')">CNPJ inválido</mat-error>
       </mat-form-field>
