--- a/src/app/pages/nucleos/nucleos-form/nucleos-form.component.html
+++ b/src/app/pages/nucleos/nucleos-form/nucleos-form.component.html
@@ -39,7 +39,7 @@
           <mat-label>Espécie</mat-label>
           <mat-select [formControl]="especieFormControl">
             <mat-option value="social">Social</mat-option>
-            <mat-option value="especial">Especial</mat-option>
+            <mat-option value="especifico">Específico</mat-option>
           </mat-select>
         </mat-form-field>
       </div>
